<resources>
    <string name="app_name">Leboncv</string>
    <string name="search_page_title">Rechercher</string>
    <string name="message_page_title">Message</string>
    <string name="fav_page_title">Favoris</string>
    <string name="profile_page_title">Profil</string>
    <string name="hint_search_bar">Rechercher sur leboncv</string>
    <string name="hint_category_search_bar">Rechercher en %1$s</string>
    <string name="ctn_desc_search_icon">Icône de recherche</string>
    <string name="ctn_desc_top_categories">Image Top Catégories</string>
    <string name="top_categories_title">Top catégories</string>
    <string name="articles_history_title">D\'après vos dernières recherches</string>
    <string name="ctn_desc_right_arrow">Icône Flèche Droit</string>
    <string name="ctn_desc_back_arrow">Icône Flèche Retour</string>
    <string name="profile_title">Mon compte</string>
    <string name="message_title">Mes messages</string>
    <string name="favourite_title">Mes favoris</string>
    <string name="skills_title">Compétences</string>
    <string name="lang_title">Langues</string>
    <string name="contact_title">Contact</string>
    <string name="ctn_desc_profile_pict">Photo De Profile</string>
    <string name="ctn_desc_ic_settings">Icône Paramètres</string>
    <string name="profile_desc">Développeur mobile Android.\nTitre d’Expert en technologie de l’information (EPITECH).</string>
    <string name="profile_location">Paris 75005.</string>
    <string name="profile_abstract">Passionné par les nouvelles technologies depuis le collège, mon envie de travailler dans les métiers du numérique s’est concrétisée lors de mon stage professionnel de 3ème effectué au sein d’une équipe réseau à la BNP Paribas. 1 an plus tard, mes toutes premières lignes de code écrites sur la calculatrice Casio en 2nde m’ont donné envie de me concentrer sur la programmation. Chose que j’ai fait pendant le lycée et mes 5 années au sein d’EPITECH Paris.</string>
    <string name="ctn_desc_article_picture">Image Article</string>
    <string name="ctn_desc_delete_fav">Bouton Supprimer Favoris</string>
    <string name="ctn_desc_flag_lang">Image Drapeau Langue</string>
    <string name="ctn_desc_ic_location">Icône Location</string>
    <string name="ctn_desc_ic_contact">Icône Contact</string>
    <string name="hint_edit_text">Aa</string>
    <string name="ctn_desc_send_msg">Bouton Envoyer Message</string>
    <string name="download_cv_text">Voir le CV au format PDF</string>
    <string name="ctn_desc_img_article">Image Article</string>
    <string name="article_desc_title">Description</string>
    <string name="linked_articles_title">Ces articles peuvent vous intéresser</string>
    <string name="google_api_key">AIzaSyDiCmp7VpdlKwPqwMEzPZ7e1H2pAjDU8ro</string>
    <string name="prefix_category">En&#160;</string>
    <string name="about_title_a_d">À propos de leboncv</string>
    <string name="close">Fermer</string>
    <string name="about_msg_a_d">Ce CV sous forme d\'application a pour objectif de résumer mon parcours scolaire ainsi que professionnel en passant par mes projets personnels et mes hobbies. Elle reprend volontairement les codes d\'une célèbre application française.\nDéveloppée par Cyril PINA-LOPES.</string>
    <string name="email_chooser_title">Envoyer un mail à %1$s…</string>
    <string name="contact_email_subject">Prise de contact via Leboncv.</string>
    <string name="soft_skills_tab_title">Compétences générales</string>
    <string name="hard_skills_tab_title">Compétences techniques</string>
    <string name="ctn_desc_ic_camera">Icône Camera</string>
    <string name="empty_string" />
    <string name="cancel">Annuler</string>
    <string name="confirm_delete">Tout supprimer</string>
    <string name="del_fav_title_a_d">Supprimer vos favoris</string>
    <string name="del_fav_msg_a_d">Souhaitez-vous supprimer l\'ensemble de vos favoris ?</string>
    <string name="fav_item_menu">Favoris</string>
    <string name="skills_item_menu">Compétences</string>
    <string name="lang_item_menu">Langues</string>
    <string name="contact_item_menu">Contact</string>
    <string name="about_item_menu">À propos</string>
    <string name="ctn_desc_ic_copy">Icône Copier</string>
    <string name="copy_to_clipboard_msg">%1$s copié dans le presse-papiers."</string>
    <string name="first_msg_chat_bot">Bonjour 👋, quel est votre prénom ?</string>
    <string name="second_msg_chat_bot">Enchanté %1$s, moi c\'est Cyril ! 😄\nSi vous souhaitez me contacter, vous pouvez le faire via la page Profil > Contact. Merci !</string>
    <string name="dev_first_name">Cyril</string>
    <string name="xp_professional">Expérience professionnelle</string>
    <string name="personal_project">Projet personnel</string>
    <string name="hobbies">Hobbies</string>
    <string name="diploma">Diplôme</string>
    <string name="no_category">Aucune catégorie</string>
    <string name="send_email">Envoyer un mail</string>
    <string name="phone_call">Appeler au téléphone</string>
    <string name="no_favourite_msg">Retrouvez toutes vos annonces favorites ici !</string>
    <string name="no_favourite_scd_msg">Appuyez simplement sur le coeur en haut à droite des articles.</string>
    <string name="no_result_msg">Désolé, nous n\'avons trouvé aucun résultat.</string>
    <string name="no_result_sec_msg">Veuillez vérifier l\'orthographe ou utiliser d\'autres termes.</string>
    <string name="now">Aujourd\'hui</string>
    <string name="less_than_1_month"><![CDATA[< 1 mois]]></string>
</resources>
