<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/search_page"
        android:enabled="true"
        android:icon="@drawable/ic_search_menu"
        android:title="@string/search_page_title" />

    <item
        android:id="@+id/favourite_page"
        android:enabled="true"
        android:icon="@drawable/ic_fav_menu"
        android:title="@string/fav_page_title" />

    <item
        android:id="@+id/message_page"
        android:enabled="true"
        android:icon="@drawable/ic_message_menu"
        android:title="@string/message_page_title" />

    <item
        android:id="@+id/profile_page"
        android:enabled="true"
        android:icon="@drawable/ic_profile_menu"
        android:title="@string/profile_page_title" />
</menu>