<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    android:focusable="true">

    <TextView
        android:id="@+id/message_title_text_view"
        style="@style/TitleTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dist_components_message_frag"
        android:layout_marginTop="@dimen/margin_main_frag_title"
        android:layout_marginEnd="@dimen/dist_components_message_frag"
        android:layout_marginBottom="@dimen/margin_main_frag_title"
        android:text="@string/message_title"
        app:layout_constraintBottom_toTopOf="@id/messages_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/messages_layout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/zero"
        app:layout_constraintBottom_toTopOf="@id/msg_text_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/message_title_text_view">

        <View
            android:id="@+id/header_messages_view"
            android:layout_width="match_parent"
            android:layout_height="@dimen/zero"
            app:layout_constraintBottom_toTopOf="@id/messages_recycler_view"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/messages_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:overScrollMode="never"
            app:reverseLayout="true"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintVertical_bias="1.0"
            app:stackFromEnd="true"
            tools:itemCount="3"
            tools:listitem="@layout/item_outgoing_message" />

    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/msg_text_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <EditText
            android:id="@+id/message_edit_text"
            style="@style/DefaultEditText"
            android:layout_width="@dimen/zero"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dist_components_message_frag"
            android:background="@drawable/background_message_edit_text"
            android:hint="@string/hint_edit_text"
            android:importantForAutofill="no"
            android:inputType="textCapSentences|textMultiLine"
            android:maxLines="2"
            android:padding="@dimen/pad_msg_edit_text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/send_msg_image_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/send_msg_image_button"
            style="@style/DefaultImageButton"
            android:layout_marginEnd="@dimen/dist_components_message_frag"
            android:contentDescription="@string/ctn_desc_send_msg"
            android:src="@drawable/ic_send"
            app:layout_constraintBottom_toBottomOf="@id/message_edit_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/message_edit_text"
            app:layout_constraintTop_toTopOf="@id/message_edit_text" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>